# analyst

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
collector/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
collector/migrations/: env.py
collector/migrations/versions/: 0001_initial.py  0002_collection_runs.py  0003_valuation_snapshots.py
collector/src/collector/: __init__.py  main.py
collector/src/collector/adapters/inbound/: __init__.py  api.py  scheduler_handler.py
collector/src/collector/adapters/outbound/kis/: __init__.py  mapper.py  market_data_adapter.py
collector/src/collector/adapters/outbound/persistence/: __init__.py  price_repository.py  (+3 more)
collector/src/collector/application/: __init__.py
collector/src/collector/application/ports/: __init__.py  market_data.py  repositories.py
collector/src/collector/application/services/: __init__.py  collection_run_service.py
collector/src/collector/application/use_cases/: __init__.py  collect_daily_prices.py
collector/src/collector/domain/: __init__.py  base.py  collection_run.py  errors.py  market.py  price.py  stock.py  valuation.py
collector/src/collector/infrastructure/: __init__.py
collector/src/collector/infrastructure/config/: __init__.py  settings.py
collector/src/collector/infrastructure/db/: __init__.py  engine.py
collector/src/collector/infrastructure/kis/: __init__.py  client.py  throttle.py
collector/tests/: conftest.py  test_collect_daily_prices.py  test_collection_run_service.py  test_kis_mapper.py  test_valuation_collection.py
(+1 files in other folders)
