[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collector"
version = "0.1.0"
description = "KIS stock daily-price collector service (pipeline stage 1)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
collector = "collector.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
packages = ["collector"]
mypy_path = "src"
ignore_missing_imports = true
